<resources>
    <string name="app_name">BlackJack</string>
    <string name="action_settings">Settings</string>
    <string name="settings_first">Settings</string>
    <string name="settings_sec">There are no viable settings atm!</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="game_fragment_title">The Game</string>
    <string name="game_first">BLACKJACK v1.0.0</string>
    <string name="dealer_1">Dealer:</string>
    <string name="dealer_total_label">Total:</string>
    <string name="dealer_total">12</string>
    <string name="dealer_new_label">Open card(s):</string>
    <string name="dealer_new">Test card one (XX)</string>
    <string name="player_1">Player:</string>
    <string name="player_total_label">Total:</string>
    <string name="player_total">20</string>
    <string name="player_new_label">Latest cards:</string>
    <string name="player_new">Test card two (XX)</string>
    <string name="game_hit">Hit</string>
    <string name="game_stand">Stand</string>
    <string name="game_reset">Reset</string>
    <string name="opening_blackjack">BlackJack v1.0.0</string>
    <string name="play_the_game">Press to play</string>
    <string name="blackjack_you_win">BlackJack! You win!</string>
    <string name="you_bust">You bust! You lost! Try again!</string>
    <string name="dealer_bust">Dealer busts! You won!</string>
    <string name="dealer_black_jack">Dealer BlackJack! Dealer wins!</string>
    <string name="dealer_win">Dealer wins! You lost! Try again!</string>
    <string name="push_no_winner">Push! Nobody wins!</string>
    <string name="game_over_reset">Game is already over, please reset!</string>
    <string name="credentials">Created by Dalibor K. © 2018.</string>
    <string name="beta_sign">BETA</string>
    <string name="score">Players wins: X, Dealer wins: X, Draws: X</string>
    <string name="dots">...</string>
    <string name="reset_total_score">Reset total score</string>
    <string name="are_you_sure_question">Are you sure you want to reset the score?</string>
    <string name="yes_answ">Reset</string>
    <string name="no_answ">Cancel</string>
    <string name="success_reset">Total score was successfully reset.</string>
    <string name="about_fragment_title">About app</string>
    <string name="action_about">About app</string>
    <string name="app_name_general">APPLICATION</string>
    <string name="app_version_general">Version</string>
    <string name="app_version">1.0.0</string>
    <string name="app_author_general">Author</string>
    <string name="app_author">Dalibor K.</string>
    <string name="app_project_general">Project</string>
    <string name="app_project">Project-BlackJackApp</string>
    <string name="contact_us">CONTACT</string>
    <string name="feedback">Found a bug or saw a place for improvement? Contact us!</string>
    <string name="contact_fragment_title">Contact us</string>
    <string name="write_us">Write us and we will try to answer ASAP!</string>
    <string name="send_mail">Send</string>
    <string name="hint_name">You name...</string>
    <string name="hint_email">Your email...</string>
    <string name="hint_msg">Your message...</string>
</resources>
