<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutsHolder"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topLayout">

        <TextView
            android:text="@string/game_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tV_game_first"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:layout_height="20dp"
            app:srcCompat="@drawable/thin_line"
            android:id="@+id/thin_line_1"
            android:layout_gravity="center"
            android:layout_width="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/midLayout"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:text="@string/dealer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tV_dealer1"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="25dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dealerLayout_1"
            android:layout_marginTop="5dp">

            <TextView
                android:text="@string/dealer_total_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tV_dealer_total_label"
                android:layout_weight="0.5"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <TextView
                android:text="@string/dealer_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tV_dealer_total"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dealerLayout_2"
            android:layout_marginTop="5dp">

            <TextView
                android:text="@string/dealer_new_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_dealer_new_label"
                android:layout_weight="0.3"
                android:textSize="20sp"
                android:textAlignment="textStart" />

            <TextView
                android:text="@string/dealer_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_dealer_new"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:textAlignment="center" />

        </LinearLayout>

        <TextView
            android:text="@string/player_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_player_1"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="25dp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playerLayout_1">

            <TextView
                android:text="@string/player_total_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tV_player_total_label"
                android:layout_weight="0.5"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <TextView
                android:text="@string/player_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tV_player_total"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/playerLayout_2">

            <TextView
                android:text="@string/player_new_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tV_player_new_label"
                android:layout_weight="0.3"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <TextView
                android:text="@string/player_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tV_player_new"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomLayout">

        <ImageView
            android:layout_height="20dp"
            app:srcCompat="@drawable/thin_line"
            android:id="@+id/thin_line_2"
            android:layout_gravity="center"
            android:layout_width="match_parent" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonsLayout">

            <Button
                android:text="@string/game_hit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_hit"
                android:layout_weight="1" />

            <Button
                android:text="@string/game_stand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_stand"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>