<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutsHolder">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topLayout"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp">

            <TextView
                android:text="@string/app_name_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tV_app_i"
                android:textStyle="normal|bold"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <ImageView
                android:layout_height="20dp"
                app:srcCompat="@drawable/thin_line"
                android:id="@+id/thin_line_12"
                android:layout_gravity="center"
                android:layout_width="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/middleLayout"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp">

            <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tV_app_name"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/versionLayout"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:text="@string/app_version_general"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tV_ver"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tV_current_version"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/authorsLayout"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:text="@string/app_author_general"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tV_auth"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/app_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tV_authors"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/projectLayout"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:text="@string/app_project_general"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tV_proj"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/app_project"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tV_project"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomLayout"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp">

            <TextView
                android:text="@string/contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tV_contact_us"
                android:textStyle="normal|bold"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <ImageView
                android:layout_height="20dp"
                app:srcCompat="@drawable/thin_line"
                android:id="@+id/thin_line_123"
                android:layout_gravity="center"
                android:layout_width="match_parent" />

            <TextView
                android:text="@string/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tV_contact_detail"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <ImageButton
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_email"
                android:layout_gravity="center"
                android:layout_width="250dp"
                android:id="@+id/iButton_feedback"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent" />

        </LinearLayout>

</LinearLayout>

</LinearLayout>