<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_opening"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dk.project_blackjack.OpeningActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutsHolder"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainLayout"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                app:srcCompat="@mipmap/bjack_launcher"
                android:id="@+id/iV_opening_blackjack"
                android:layout_height="180dp" />

            <TextView
                android:text="@string/opening_blackjack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_opening_label"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal|bold|italic" />

            <Button
                android:text="@string/play_the_game"
                android:layout_width="match_parent"
                android:id="@+id/button_play"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_height="60dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                style="@android:style/Widget.Material.Light.Button.Borderless" />

            <TextView
                android:text="@string/credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tV_credentials"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textStyle="normal|italic"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
